<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <TextView
       android:id="@+id/mricxvnumID"
       android:layout_width="120dip"
       android:layout_height="50dp"
       android:gravity="center"
       android:text="@string/rmricxvnumb"
       android:textColor="#ffffff"
       android:textSize="20dip" />
    <TextView
        android:id="@+id/axalichvID"
       android:layout_width="200dp"
       android:layout_height="50dp"
       android:textSize="20dip"
       android:gravity="center"
       android:textColor="#ffffff"
       android:text="@string/raxalichv"/>
    <TextView
        android:id="@+id/StreetID"
       android:layout_width="300dp"
       android:layout_height="50dp"
       android:textSize="20dip"
       android:gravity="center"
       android:textColor="#ffffff"
       android:text="@string/Street_lab"/>
    <TextView
       android:id="@+id/HouseID" 
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:textSize="20dip"
       android:gravity="center"
       android:textColor="#ffffff"
       android:text="@string/House_lab"/>
    <TextView
       android:id="@+id/bildingID"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:textSize="20dip"
       android:gravity="center"
       android:textColor="#ffffff"
       android:text="@string/bilding_lab"/>
    <TextView
       android:id="@+id/forchID" 
       android:layout_width="120dp"
       android:layout_height="50dp"
       android:textSize="20dip"
       android:gravity="center"
       android:textColor="#ffffff"
       android:text="@string/forch_lab"/>
    <TextView
        android:id="@+id/noteID"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:gravity="center"
       android:text="@string/note"
       android:textColor="#ffffff"
       android:textSize="20dip" />

</LinearLayout>