<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView  
       android:id="@+id/amc_nameID"
       android:layout_width="150dp"
       android:textColor="#ffffff"
       android:layout_height="wrap_content"
       android:text="@string/amc"
       android:maxLines="2"
       android:minLines="1"
       android:textSize="18sp"/>
    <TextView
       android:id="@+id/marsh_nameID"
       android:layout_width="200dp"
       android:textColor="#ffffff"
       android:layout_height="wrap_content"
       android:text="@string/Route_lab"
       android:textSize="18sp"/>
    <TextView
       android:id="@+id/marsh_numID"
       android:layout_width="100dp"
       android:textColor="#ffffff"
       android:layout_height="wrap_content"
       android:text="@string/Route_n"
       android:textSize="18sp"/>
    <TextView
       android:id="@+id/wasakitxia_sulID"
       android:layout_width="100dp"
       android:textColor="#ffffff"
       android:gravity="center_horizontal"
       android:layout_height="wrap_content"
       android:text="@string/wakiTxuli"
       android:textSize="22sp"/>
    <TextView
       android:id="@+id/saechvo_wakitxvaID"
       android:layout_width="150dp"
       android:textColor="#ffffff"
       android:layout_height="wrap_content"
       android:text="@string/saeTvo"
       android:textSize="18sp"/>
    <TextView
       android:id="@+id/routis_tarigiID"
       android:layout_width="200dp"
       android:textColor="#ffffff"
       android:layout_height="wrap_content"
       android:text="@string/lbtarigi"
       android:textSize="18sp"/>
    
    <TextView
       android:id="@+id/wamkitxveliID"
       android:layout_width="270dp"
       android:textColor="#ffffff"
       android:layout_height="wrap_content"
       android:text="@string/wamkiTxveli"
       android:textSize="18sp"/>
    <TextView
       android:id="@+id/statusID"
       android:gravity="center_horizontal"
       android:layout_width="100dp"
       android:textColor="#ffffff"
       android:layout_height="wrap_content"
       android:text="@string/wamkiTxveli"
       android:textSize="18sp"/>
</LinearLayout>